add initial header
- email needs to be configured

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
-  text-align: center;
+    text-align: center;
+    margin-top: 10px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.profile-picture {
+    border-radius: 50%;
+    height: 120px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.divider {
+    background-color: black;
+    color: black;
+    border: none;
+    width: 100px;
+    height: 5px;
+    margin-bottom: 1px;
+    border-radius: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.portfolio-links {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.portfolio-links span {
+    margin-right: 2px;
+    margin-left: 2px;
 }
