styling, add favicon.ico

--- a/src/project/projectItem.css
+++ b/src/project/projectItem.css
@@ -1,7 +1,7 @@
 .ProjectItem {
     background-color: #dfe1e6;
     border-radius: 5px;
-    margin-top: 5px;
+    margin: 5px 5px 20px;
 }
 
 .language-icon {
