--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,16 @@
 .header {
     text-align: center;
 }
+
+@media (min-width: 992px){
+    .container, .container-lg, .container-md, .container-sm {
+        max-width: 800px;
+    }
+}
+
+@media (min-width: 1200px)
+{
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+        max-width: 900px;
+    }
+}
