--- a/src/project/projectItem.css
+++ b/src/project/projectItem.css
@@ -2,7 +2,7 @@
     background-color: #dfe1e6;
     border-radius: 5px;
     margin: 5px 5px 20px;
-    padding: 16px 0;
+    padding-top: 16px;
 }
 
 .language-icon {
@@ -31,4 +31,6 @@
     display: flex;
     justify-content: center;
     padding-bottom: 10px;
+    margin-top: 10px;
 }
+
