--- a/src/project/projectItem.css
+++ b/src/project/projectItem.css
@@ -22,7 +22,7 @@
 .project-body {
     padding: 10px 10px 10px 10px;
     background-color: white;
-    margin: 8px;
+    margin: 8px 40px;
     border-radius: 2px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
